# Karna

Quadcopter/: CMakeLists.txt  motion.cpp
server-Client/: CMakeLists.txt  Client_d.cpp  PracticalSocket.cpp  Server_d.cpp  config.h
struck (camera)/Profiles/abhijeet/SPS/SPS1/: images.xml
struck (camera)/Profiles/abhijeet/SPS/SPS10/: images.xml
struck (camera)/Profiles/abhijeet/SPS/SPS12/: images.xml
struck (camera)/Profiles/abhijeet/SPS/SPS15/: images.xml
struck (camera)/Profiles/abhijeet/SPS/SPS17/: images.xml
struck (camera)/Profiles/abhijeet/SPS/SPS18/: images.xml
struck (camera)/Profiles/abhijeet/SPS/SPS19/: images.xml
struck (camera)/Profiles/abhijeet/SPS/SPS2/: images.xml
struck (camera)/Profiles/mohit4/SPS/SPS11/: images.xml
struck (camera)/Profiles/mohit4/SPS/SPS13/: images.xml
struck (camera)/Profiles/mohit4/SPS/SPS14/: images.xml
struck (camera)/Profiles/mohit4/SPS/SPS16/: images.xml
struck (camera)/Profiles/mohit4/SPS/SPS17/: images.xml
struck (camera)/Profiles/mohit4/SPS/SPS22/: images.xml
struck (camera)/Profiles/mohit4/SPS/SPS25/: images.xml
struck (camera)/Profiles/mohit4/SPS/SPS28/: images.xml
struck (camera)/Profiles/mohit4/SPS/SPS32/: images.xml
struck (camera)/Profiles/mohit4/SPS/SPS33/: images.xml
struck (camera)/Profiles/mohit4/SPS/SPS37/: images.xml
struck (camera)/src/: LaRank.h  Tracker.h  main.cpp  opticalFlow.cpp
struck (copy)/src/: LaRank.cpp  Tracker.cpp  opticalFlow.h
struck(server)/src/: Config.cpp  main.cpp
struck/src/: Config.cpp  Config.h  Tracker.cpp  Tracker.h  main.cpp
(+114 files in other folders)
