cmake_minimum_required(VERSION 2.8)
project( lan_vid_pseudostream )
find_package( OpenCV REQUIRED )
add_executable( server_s Server_s.cpp PracticalSocket.cpp )
target_link_libraries( server_s ${OpenCV_LIBS} )
add_executable( client_s Client_s.cpp PracticalSocket.cpp )
target_link_libraries( client_s ${OpenCV_LIBS} )
add_executable( server_d Server_d.cpp PracticalSocket.cpp )
target_link_libraries( server_d ${OpenCV_LIBS} )
add_executable( client_d Client_d.cpp PracticalSocket.cpp )
target_link_libraries( client_d ${OpenCV_LIBS} )